[gd_scene load_steps=9 format=3 uid="uid://b8i8pndl7ssvd"]

[ext_resource type="Texture2D" uid="uid://jpeleqt81evg" path="res://graphics/PNG/playerShip1_blue.png" id="1_3vyb7"]
[ext_resource type="Script" uid="uid://b5uee4nwrsrf0" path="res://scenes/player.gd" id="1_g2els"]
[ext_resource type="AudioStream" uid="uid://do1y55imqadw2" path="res://graphics/Bonus/sfx_shieldUp.ogg" id="4_dqkch"]
[ext_resource type="Texture2D" uid="uid://s3rdqt2shnlj" path="res://graphics/rocio/space-man-2.png" id="4_fjrip"]
[ext_resource type="Texture2D" uid="uid://drbict821rj5j" path="res://graphics/rocio/space-man-1.png" id="5_qlg0r"]
[ext_resource type="Texture2D" uid="uid://bd0rumvn3ctga" path="res://graphics/rocio/space-man-3.png" id="5_smehm"]
[ext_resource type="AudioStream" uid="uid://ctdxd4p8fpqf1" path="res://audio/kiss-blown/beso-2.wav" id="6_fjrip"]

[sub_resource type="SpriteFrames" id="SpriteFrames_ur7pv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_qlg0r")
}, {
"duration": 1.0,
"texture": ExtResource("4_fjrip")
}, {
"duration": 1.0,
"texture": ExtResource("5_smehm")
}, {
"duration": 1.0,
"texture": ExtResource("4_fjrip")
}, {
"duration": 1.0,
"texture": ExtResource("5_qlg0r")
}],
"loop": true,
"name": &"default",
"speed": 12.0
}]

[node name="Player" type="CharacterBody2D"]
collision_mask = 6
script = ExtResource("1_g2els")

[node name="PlayerImage" type="Sprite2D" parent="."]
position = Vector2(23.09357, 9.499999)
scale = Vector2(2, 1.832)
skew = 0.7452556
texture = ExtResource("1_3vyb7")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-16.000015, -87)
scale = Vector2(0.75, 0.718)
sprite_frames = SubResource("SpriteFrames_ur7pv")
autoplay = "default"
frame_progress = 0.4464285

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="."]
position = Vector2(0, -4)
scale = Vector2(1.87, 1.87)
polygon = PackedVector2Array(-64, -73, -55, -69, -53, -81, -38, -52, -30, -54, -41, -75, -39, -94, -26, -108, -7, -114, 13, -108, 25, -93, 26, -71, 21, -61, 18, -53, 21, -51, 28, -65, 33, -70, 39, -82, 41, -69, 51, -74, 45, -65, 45, -55, 40, -49, 31, -35, 21, -32, 18, -34, 18, -15, 15, -8, 12, 14, 17, 21, 6, 25, -2, 23, -6, 19, -8, 22, -16, 25, -27, 23, -33, 20, -27, 12, -32, -16, -32, -31, -45, -35, -51, -41, -54, -49, -61, -56, -60, -64)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2(23.094, 9.5)
scale = Vector2(2, 1.506)
skew = 0.7452556
polygon = PackedVector2Array(-9, -38, 8, -38, 12, -13, 36, 1, 40, -1, 48, -7, 46, 23, 42, 19, 37, 23, 14, 27, 8, 37, -8, 38, -12, 27, -37, 23, -42, 21, -46, 25, -49, -6, -42, -1, -36, 2, -12, -12)

[node name="LaserStartPosition" type="Marker2D" parent="."]
position = Vector2(76, -68)

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 0.85
autostart = true

[node name="LaserSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_fjrip")
volume_db = -19.484

[node name="DamageSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_dqkch")

[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
